	- fixed file descriptor leak when messages were jostled out that
	  had outstanding (TCP) replies.
	- DNAMEs used from cache have their synthesized CNAMEs initialized
	  properly.
	- fixed file descriptor leak for localzone type deny (for TCP).
	- fixed memleak at exit for nsec3 negative cached zones.
	- fixed memleak for the keyword 'nodefault' when reading config.

4 November 2008: Wouter
	- fixed -Wwrite-strings warnings that result in better code.

3 November 2008: Wouter
	- fixup build process for Mac OSX linker, use ldns b32 compat funcs.
	- generated configure with autoconf-2.61.
	- iana portlist updated.
	- detect if libssl needs libdl.  For static linking with libssl.
	- changed to use new algorithm identifiers for sha256/sha512
	  from ldns 1.4.0 (need very latest version).
	- updated the included ldns tarball.
	- proper detection of SHA256 and SHA512 functions (not just sizes).

23 October 2008: Wouter
	- a little more debug info for failure on signer names. prints names.

22 October 2008: Wouter
	- CFLAGS are picked up by configure from the environment.
	- iana portlist updated.
	- updated ldns to use 1.4.0-pre20081022 so it picks up CFLAGS too.
	- new stub-prime: yesno option. Default is off, so it does not prime.
	  can be turned on to get same behaviour as previous unbound release.
	- made automated test that checks if builtin root hints are uptodate.
	- finished draft-wijngaards-dnsext-resolver-side-mitigation
	  implementation. The unwanted-reply-threshold can be set.
	- fixup so fptr_whitelist test in alloc.c works.

21 October 2008: Wouter
	- fix update-anchors.sh, so it does not report different RR order
	  as an update.  Sorts the keys in the file.  Updated copyright.
	- fixup testbound on windows, the command control pipe doesn't exist.
	- skip 08hostlib test on windows, no fork() available.
	- made unbound-remote work on windows.

20 October 2008: Wouter
	- quench a log message that is debug only.
	- iana portlist updated.